2003-10-16  Nick Garnett  <nickg@balti.calivar.com>

	* src/at91_serial.c (at91_serial_config_port): Added update of
	channel configuration, which was missing.

2003-02-24  Jonathan Larmour  <jifl@eCosCentric.com>

	* cdl/ser_arm_at91.cdl: Remove irrelevant doc link.

2001-09-20  Jesper Skov  <jskov@redhat.com>

	* src/at91_serial.c (at91_serial_init): Use valid interrupt priority.

2001-09-10  Jonathan Larmour  <jlarmour@redhat.com>

        * cdl/ser_arm_at91.cdl:        
        Fix 234000->230400 typo.

2001-08-14  Jonathan Larmour  <jlarmour@redhat.com>

	* src/at91_serial.c (at91_serial_stop_xmit): Write to IDR, not IER.
	(at91_serial_ISR): Return CYG_ISR_HANDLED.

2001-07-24  Gary Thomas  <gthomas@redhat.com>

	* src/at91_serial.h: 
	* src/at91_serial.c: 
	* cdl/ser_arm_at91.cdl: New file(s) - initial package.

//===========================================================================
//####ECOSGPLCOPYRIGHTBEGIN####
// -------------------------------------------
// This file is part of eCos, the Embedded Configurable Operating System.
// Copyright (C) 1998, 1999, 2000, 2001, 2002 Red Hat, Inc.
//
// eCos is free software; you can redistribute it and/or modify it under
// the terms of the GNU General Public License as published by the Free
// Software Foundation; either version 2 or (at your option) any later version.
//
// eCos is distributed in the hope that it will be useful, but WITHOUT ANY
// WARRANTY; without even the implied warranty of MERCHANTABILITY or
// FITNESS FOR A PARTICULAR PURPOSE.  See the GNU General Public License
// for more details.
//
// You should have received a copy of the GNU General Public License along
// with eCos; if not, write to the Free Software Foundation, Inc.,
// 59 Temple Place, Suite 330, Boston, MA 02111-1307 USA.
//
// As a special exception, if other files instantiate templates or use macros
// or inline functions from this file, or you compile this file and link it