@@ -41,7 +41,7 @@
 ######DESCRIPTIONBEGIN####
 #
 # Author(s):      gthomas
-# Contributors:
+# Contributors:   tkoeller
 # Date:           2001-07-24
 #
 #####DESCRIPTIONEND####
@@ -61,7 +61,9 @@ cdl_package CYGPKG_IO_SERIAL_ARM_AT91 {
     include_files ; # none _exported_ whatsoever
     description   "
            This option enables the serial device drivers for the
-           Atmel AT91 (EB40)."
+           Atmel AT91."
+    
+    implements    CYGINT_IO_SERIAL_BLOCK_TRANSFER
 
     compile       -library=libextras.a   at91_serial.c
 
@@ -109,6 +111,21 @@ cdl_component CYGPKG_IO_SERIAL_ARM_AT91_SERIAL0 {
             This option specifies the size of the internal buffers used 
             for the Atmel AT91 port 0."
     }
+    
+    cdl_option CYGNUM_IO_SERIAL_ARM_AT91_SERIAL0_RCV_CHUNK_SIZE {
+        display       "Receive data chunk size"
+        flavor        data
+        legal_values  1 to 65519
+        default_value 1
+        description   "
+            This parameter can be used to reduce the number of interrupts
+            that must be processed by the driver. An interrupt will only
+            be generated if either this many data bytes have been received
+            or the receiver has been idle for some time. This reduces
+            overall system load at the expense of making the driver less
+            responsive and using slightly more memory for buffering data.
+            Setting this parameter to 1 will give standard behavior."
+    }
 }
 
 cdl_component CYGPKG_IO_SERIAL_ARM_AT91_SERIAL1 {
@@ -148,6 +165,21 @@ cdl_component CYGPKG_IO_SERIAL_ARM_AT91_SERIAL1 {
         description   "
             This option specifies the size of the internal buffers used 
             for the Atmel AT91 port 1."
+    }
+    
+    cdl_option CYGNUM_IO_SERIAL_ARM_AT91_SERIAL1_RCV_CHUNK_SIZE {
+        display       "Receive data chunk size"
+        flavor        data
+        legal_values  1 to 65519
+        default_value 1
+        description   "
+            This parameter can be used to reduce the number of interrupts
+            that must be processed by the driver. An interrupt will only
+            be generated if either this many data bytes have been received
+            or the receiver has been idle for some time. This reduces
+            overall system load at the expense of making the driver less
+            responsive and using slightly more memory for buffering data.
+            Setting this parameter to 1 will give standard behavior."
     }
 }
 
